--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: "build-test"
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
-    branches:
-      - master
-      - 'releases/*'
+    paths-ignore:
+    - '**/*.md'
+    - '**/*.org'
 
 jobs:
   build: # make sure build/ci work properly
@@ -17,7 +17,8 @@ jobs:
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
+    - uses: cachix/install-nix-action@v8
     - uses: actions/checkout@v1
     - uses: ./
-      with: 
-        milliseconds: 1000
+      with:
+        config-file: example/.melpa-check
